@@ -3,7 +3,5 @@ Make Stack more flexible, it's a fixed-length array.
 AI stuff
   Warships should hunt origins of torpedoes
 
-Add sounds
-
 Add thermal layer?
 
